ΜΑΘΗΜΑΤΑ/ΗΥ-340/PROJECTS/Compiler_Exec/examples/phase_2/Errors/Error4.asc
//

function f(x) {
	function x(y){}		//Error: Variable 'x' already defined at line: 3
}
